--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,6 @@
   <div id="tabContentContainer"></div>
 </div>
 <!-- JavaScript file -->
-<script src="/templates/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
