--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,6 @@
   <div id="tabContentContainer"></div>
 </div>
 <!-- JavaScript file -->
-<script src="scripts.js"></script>
+<script src="https://raw.githubusercontent.com/HungryPistachio/book-rec-sys-1/main/scripts.js"</script>
 </body>
 </html>
