--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
   <div id="tabContentContainer"></div>
 </div>
 <!-- JavaScript file -->
-<script src="https://raw.githubusercontent.com/HungryPistachio/book-rec-sys-1/main/scripts.js"></script>
+<!-- JavaScript file -->
+<script type="text/javascript" src="https://raw.githubusercontent.com/HungryPistachio/book-rec-sys-1/main/scripts.js"></script>
 </body>
 </html>
