--- a/templates/index.html
+++ b/templates/index.html
@@ -271,7 +271,7 @@
 
 //recommendations based on cosine similarity
     const seenTitles = new Set();
-    const recommendations = [];
+    let recommendations = [];
 
 
     processedBooks.forEach((book, idx) => {
