--- a/templates/index.html
+++ b/templates/index.html
@@ -225,7 +225,7 @@
       const includeSameAuthor = document.getElementById(`includeSameAuthor${model.charAt(0).toUpperCase() + model.slice(1)}`).checked;
 
       // Fetch book data from Google Books API
-      const googleApiKey = 'YOUR_API_KEY';
+      const googleApiKey = 'AIzaSyDQTQy3LT7BOO_LLClbWuEvqiPbUbWWKBs';
       const googleApiUrl = `https://www.googleapis.com/books/v1/volumes?q=${encodeURIComponent(bookTitle)}&maxResults=40&key=${googleApiKey}`;
 
       let books;
